# ParaView3POpenFOAMReader

./: CMakeLists.txt  README
BSD/: CMakeLists.txt  INSTALL  POpenFOAMReaderParaViewImport.cmake  POpenFOAMReaderSM.xml  ReleaseNotes  preInstall.sh  pvFoam  pythonExample.py  readers.xml  vtkNewOpenFOAMReader.cxx  vtkNewOpenFOAMReader.h  vtkNewPOpenFOAMReader.cxx  vtkNewPOpenFOAMReader.h  vtkOpenFOAMReader.cxx  vtkOpenFOAMReader.h  vtkOpenFOAMReader.xml  vtkPOpenFOAMReader.cxx  vtkPOpenFOAMReader.h
BSD/3.6.1/: CMakeLists_Hybrid.txt.diff  CMakeLists_IO.txt.diff
BSD/3.6.2/: CMakeLists_IO.txt.diff  CMakeLists_Parallel.txt.diff
BSD/CMake/: FindRegex.cmake
BSD/Examples/: pvPythonExample1.py  vtkPythonExample1.py
GPL/: CMakeLists.txt  INSTALL  LICENSE.GPL2  POpenFOAMReaderGUI.xml  POpenFOAMReaderSM.xml  ReleaseNotes  fixupBundle.cmake  pqOpenFOAMPanel.cxx  pqOpenFOAMPanel.h  pqPOpenFOAMPanel.cxx  pqPOpenFOAMPanel.h  pvFoam  vtkPOpenFOAMReader.cxx  vtkPOpenFOAMReader.h
GPL/3.4.0/: CMakeLists.txt.diff  pqObjectInspectorWidget.cxx.diff
GPL/3.6.2/: CMakeLists.txt.diff  pqObjectInspectorWidget.cxx.diff
